--- a/Web.Statu/App_Code/SearchResults.cshtml
+++ b/Web.Statu/App_Code/SearchResults.cshtml
@@ -16,6 +16,121 @@
     }
 }
 
+
+
+@helper OsobaTableResult(System.Security.Principal.IPrincipal user, HttpRequestBase req,
+            int maxItems, HlidacStatu.Lib.Searching.InsolvenceSearchResult result)
+{
+    <div class="table-new searching__watcher__table">
+        <table class="table table-hover">
+            <thead>
+                @SearchResults.OsobaHead()
+            </thead>
+            <tbody>
+                @foreach (var hit in result.Result.Hits.Take(maxItems))
+                {
+                    @SearchResults.OsobaRow(user, req, hit.Source)
+                }
+            </tbody>
+        </table>
+
+        @if (result.Total > maxItems)
+        {
+            <div class="text-center">
+                <a class="btn btn-default btn-default-new" href="@Url.Action("Hledat", "Insolvence", result.ToRouteValues(1))">zobrazit všechny nalezené </a>
+            </div>
+        }
+
+    </div>
+}
+
+@helper OsobaHead(bool small = false)
+{
+    <tr>
+        <th>Spisová značka</th>
+        <th>Dlužníci</th>
+        <th>Věritelé</th>
+        <th>Datum vzniku</th>
+        <th>Poslední změna</th>
+        <th>Stav řízení</th>
+        @if (small == false)
+        {
+            <th>Soud</th>
+        }
+    </tr>
+}
+
+@helper OsobaRow(System.Security.Principal.IPrincipal user, HttpRequestBase request,
+    HlidacStatu.Lib.Data.Insolvence.Rizeni item, string query = "", bool small = false)
+{
+    <tr>
+        <td style="white-space: nowrap;">
+            @Util.NoWrapHtml(
+                Util.AddBookmark(user, item),
+                Html.Raw("&nbsp;"),
+                 Util.IfExists(HlidacStatu.Web.Framework.LimitedAccess.IsAuthenticatedOrSearchCrawler(request),
+                    $"<a href='{item.GetUrl(true, query)}'>{item.SpisovaZnacka}</a>",
+                    $"<a href='#' data-toggle='modal' data-target='#VZInfoAnon' data-url='/Insolvence/Rizeni/{item.UrlId()}'>{item.SpisovaZnacka}</a>"
+                )
+             )
+        </td>
+        <td>
+            @if (item.Dluznici?.Count > 0)
+            {
+                foreach (var o in item.Dluznici.Take(2))
+                {
+                    <div>@Html.Raw(o.ToHtml())</div>
+                }
+                if (item.Dluznici.Count == 3)
+                {
+                    <div>@Html.Raw(item.Dluznici[2].ToHtml())</div>
+                }
+                else if (item.Dluznici.Count > 3)
+                {
+                    <div>@Devmasters.Core.Lang.Plural.Get(item.Dluznici.Count - 2, "a jeden další dlužník", "a další {0} dlužníci", "a dalších {0} dlužníků")</div>
+                }
+            }
+        </td>
+        <td>
+            @if (item.Veritele?.Count > 0)
+            {
+                foreach (var o in item.Veritele.Take(2))
+                {
+                    <div>@Html.Raw(o.ToHtml())</div>
+                }
+                if (item.Veritele.Count == 3)
+                {
+                    <div>@Html.Raw(item.Veritele[2].ToHtml())</div>
+                }
+                else if (item.Veritele.Count > 3)
+                {
+                    <div>@Devmasters.Core.Lang.Plural.Get(item.Veritele.Count - 2, "a jeden další věřitel", "a další {0} věřitelé", "a dalších {0} věřitelů")</div>
+                }
+            }
+        </td>
+        <td>
+            @(item.DatumZalozeni?.Date.ToString("d.MM.yyyy") ?? "Neznámé")
+        </td>
+        <td>
+            @item.PosledniZmena.Date.ToString("d.MM.yyyy")
+        </td>
+
+        <td>
+            <span title="@item.StavRizeniDetail()">@item.StavRizeni()</span>
+        </td>
+        @if (small == false)
+        {
+            <td>
+                <span>@item.SoudFullName()</span>
+            </td>
+        }
+    </tr>
+}
+
+
+
+
+
 @helper InsolvenceTableResult(System.Security.Principal.IPrincipal user, HttpRequestBase req,
             int maxItems, HlidacStatu.Lib.Searching.InsolvenceSearchResult result)
 {
@@ -363,7 +478,7 @@
                 Util.AddBookmark(user, item),
                 Html.Raw("&nbsp;"),
                 Util.IfExists(HlidacStatu.Web.Framework.LimitedAccess.IsAuthenticatedOrSearchCrawler(req),
-                  $"<a href='{item.GetUrl(true,query)}'>{item.EvidencniCisloZakazky}</a>",
+                  $"<a href='{item.GetUrl(true, query)}'>{item.EvidencniCisloZakazky}</a>",
                   $"<a href='#' data-toggle='modal' data-target='#VZInfoAnon' data-url='/verejnezakazky/zakazka/@item.Id'>{item.EvidencniCisloZakazky}</a>"
                   )
             )
