--- a/Web.Statu/Views/Home/Reports/12_SmlouvyBezUvedeneCenySouhrn.cshtml
+++ b/Web.Statu/Views/Home/Reports/12_SmlouvyBezUvedeneCenySouhrn.cshtml
@@ -50,7 +50,7 @@ new ReportDataSource.Column() {
         }
         );
 
-    foreach (Nest.KeyedBucket<object> val in ((BucketAggregate)res.Result.Aggregations["perIco"]).Items)
+    foreach (Nest.KeyedBucket<object> val in ((BucketAggregate)res.ElasticResults.Aggregations["perIco"]).Items)
     {
         rdsPerIco.AddRow(
             new Tuple<string, string>(HlidacStatu.Lib.Data.External.FirmyDB.NameFromIco((string)val.Key, true), (string)val.Key),
