--- a/Web.Statu/Views/Home/Subjekt_Dodavatel.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Dodavatel.cshtml
@@ -77,7 +77,7 @@ new  ReportDataSource.Column() { Name="Součet cen",
 
 
     foreach (Nest.KeyedBucket<object>
-val in ((BucketAggregate)res.Result.Aggregations["perIco"]).Items)
+val in ((BucketAggregate)res.ElasticResults.Aggregations["perIco"]).Items)
     {
         rdsPerIco.AddRow(
         new Tuple<string, string>
@@ -86,7 +86,7 @@ val in ((BucketAggregate)res.Result.Aggregations["perIco"]).Items)
             );
     }
     foreach (Nest.KeyedBucket<object>
-        val in ((BucketAggregate)res.Result.Aggregations["perPrice"]).Items)
+        val in ((BucketAggregate)res.ElasticResults.Aggregations["perPrice"]).Items)
     {
         rdsPerPrice.AddRow(
         new Tuple<string, string>
