--- a/Web.Statu/Views/Dotace/_SearchResult.cshtml
+++ b/Web.Statu/Views/Dotace/_SearchResult.cshtml
@@ -15,7 +15,7 @@
     }
 </script>
 
-@if (Model?.Result?.IsValid == false || Model.Result == null)
+@if (Model?.ElasticResults?.IsValid == false || Model.ElasticResults == null)
 {
     <div class="row">
         <div class="col-xs-12">
@@ -34,15 +34,15 @@ else
             @Util.AddWatchDog(this.User, Model.Q, typeof(HlidacStatu.Lib.Data.Insolvence.Rizeni))
         }*@
 
-    if (Model.Result == null)
+    if (Model.ElasticResults == null)
     {
         <span></span>
     }
-    else if (Model.Result.Total == 0)
+    else if (Model.ElasticResults.Total == 0)
     {
         <h2>Žádné dotace jsme nenalezli.</h2>
     }
-    else if (Model.Result.Total > 0)
+    else if (Model.ElasticResults.Total > 0)
     {
         <hr />
 
@@ -60,12 +60,12 @@ else
                 <h3>
                     Nalezené dotace
                     <small>
-                        @HlidacStatu.Util.RenderData.Vysledky.PocetVysledku(Model.Result.HitsMetadata.Total, false, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)
+                        @HlidacStatu.Util.RenderData.Vysledky.PocetVysledku(Model.ElasticResults.HitsMetadata.Total, false, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)
                     </small>
                 </h3>
-                @if (Model?.Result?.Aggregations != null && Model?.Result?.Aggregations?.ContainsKey("souhrn") == true)
+                @if (Model?.ElasticResults?.Aggregations != null && Model?.ElasticResults?.Aggregations?.ContainsKey("souhrn") == true)
                 {
-                    double? sum = ((Nest.ValueAggregate)Model?.Result?.Aggregations["souhrn"])?.Value;
+                    double? sum = ((Nest.ValueAggregate)Model?.ElasticResults?.Aggregations["souhrn"])?.Value;
                     <div>
                         V celkové hodnotě @HlidacStatu.Util.RenderData.NicePrice((decimal)sum). <sup>*)</sup>
                     </div>
@@ -82,7 +82,7 @@ else
                 @SearchResults.DotaceHead()
             </thead>
             <tbody>
-                @foreach (var hit in Model.Result.Hits)
+                @foreach (var hit in Model.ElasticResults.Hits)
                 {
                     @SearchResults.DotaceRow(User, Request, hit.Source, Model.Q)
                 }
@@ -106,7 +106,7 @@ else
                     {
                         firstPageClass = "disabled";
                     }
-                    if (Model.Result.Total < page * Model.DefaultPageSize())
+                    if (Model.ElasticResults.Total < page * Model.DefaultPageSize())
                     {
                         lastPageClass = "disabled";
                     }
